--- a/data_processing.Rmd
+++ b/data_processing.Rmd
@@ -94,10 +94,7 @@ nyc_cvrisk =
          measure_id %in% c("ACCESS2", "BINGE", "BPHIGH", "BPMED", "OBESITY", "CHECKUP", 
                          "CHOLSCREEN", "CSMOKING", "DIABETES", "HIGHCHOL", "KIDNEY", 
                          "LPA", "MHLTH", "PHLTH", "SLEEP", "CHD", "STROKE")) %>% 
-  separate(geo_location, into = c("latitude", "longitude"), sep = ",") %>% 
-  mutate(latitude = str_replace(latitude, "\\(", ""),
-         longitude = str_replace(longitude, "\\)", "")) %>% 
-  select(unique_id, latitude, longitude, population_count, measure_id, data_value, short_question_text)
+ select(unique_id, population_count, measure_id, data_value, short_question_text)
 
 
 nyc_cvrisk_wide = 
@@ -500,7 +497,7 @@ theme_set(theme_bw())  # pre-set the bw theme.
 ## using transition_length and state_length
 
 p <- 
-<<<<<<< HEAD
+
   ggplot(data = nyc_cvrisk_joined, aes(x = chd_value, y = data_value, frame = "Risk Factor", label = "Risk Factor")) +
   geom_point(data = nyc_cvrisk_joined, aes( 
                                            size = "Population", colour = "Risk Factor" ),
