--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -27,8 +27,10 @@ library(corrplot)
 
 ####*Here's more:*
 
-Majority of Americans are already suffering from heart disease:
-![Prevalence of heart disease](pictures/facts.png)
+Majority of Americans are already suffering from heart disease. The prevalence of heart disease in the US is shown in the map below.
+
+
+![Prevalence of heart disease](pictures/chd_map.gif)
 
 ####*And…*
 
@@ -37,6 +39,7 @@ Majority of Americans are already suffering from heart disease:
 ![Lifestyle risk factors](pictures/lifestyle.png)
 
 There is plenty of room for improvement when it comes to raising awareness for cardiovascular risk, based on a [recent study](https://www.ahajournals.org/doi/pdf/10.1161/JAHA.117.005491) that found one in five adults at risk for heart disease don’t recognize a need to improve their health. We believe that a better understanding of risk factors underlying health perceptions and behaviors is needed to capitalize on cardiovascular preventive efforts.
+
 
 ###Goals of our project
 
@@ -47,9 +50,11 @@ There is plenty of room for improvement when it comes to raising awareness for c
 
 
 #Related Work
+
 We were inspired to work on this project given our collective interest in heart disease and role of data science for improved visualization for potential application by healthcare providers, patients and the community. One of our team members, Aakriti, is a cardiology fellow at Columbia, and also co-founder of a preventive cardiology startup called [Heartbeat](https://www.heartbeathealth.com). The mission of this company is to redesign the field of cardiology to be more inclusive and improve quality of life at any age. Their practice focuses on early diagnosis and management that empowers people to feel better, live healthier, understand their heart, and most importantly — have access to a trusted clinical team anywhere. They are a multidisciplinary team of doctors, educators, engineers, and researchers making prevention as simple as getting the heart checked. They are headquartered in Manhattan. 
 
 Drawing inspiration from this work, we created this website with the goal to develop interactive visualization of heart disease prevalence and risk factors that are easy to understand for lay people so that they begin to understand their individualized risk and can begin to take steps toward prevention.
+
 
 
 #Initial questions
@@ -59,6 +64,7 @@ We sought to examine the risk factors for heart disease and their prevalence in 
 * What are the risk factors for heart disease and stroke? How can we visualize the correlation of individual risk factors with heart disease and stroke?
 * What is the distribution of these risk factors and outcomes in New York city?
 * How can we predict and visualize an individual's risk for heart disease?
+
 
 #Data
 
@@ -123,7 +129,8 @@ nyc_cvrisk =
   select(unique_id, population_count, measure_id, data_value, short_question_text)
 ```
 
-###Making the animated scatterplot
+###Making the animated scatterplot for coronary artery disease
+
 We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset.
 
 ```{r}
@@ -150,11 +157,13 @@ nyc_cvrisk_joined_stroke = left_join(nyc_cvrisk_limited, nyc_stroke, by = "uniqu
 
 
 We then installed the package required for animation
+
 ```{r, eval=FALSE}
 devtools::install_github('thomasp85/gganimate')
 ```
 
 We then created an animated scatterplot with Coronary Heart DIsease prevalence on the X-axis and different risk factors on the Y-axis
+
 ```{r, warning=FALSE}
 theme_set(theme_bw())  # pre-set the bw theme.
 
@@ -184,8 +193,14 @@ p = nyc_cvrisk_joined %>%
   enter_fade() +
   exit_fade()
 
-animate(p, fps = 1, height = 600, width = 1000, renderer = gifski_renderer())
+animate(p, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())
+```
 
+###Making the animated scatterplot for stroke
+
+We created a similar animation for stroke as shown below:
+
+```{r, warning=FALSE}
 theme_set(theme_bw())  # pre-set the bw theme.
 pp = nyc_cvrisk_joined_stroke %>%  
   ggplot(aes(x = data_value.y, y = data_value.x, frame = risk_factor)) +
@@ -209,14 +224,13 @@ pp = nyc_cvrisk_joined_stroke %>%
   enter_fade() +
   exit_fade()
 
-animate(pp, fps = 1, height = 600, width = 1000, renderer = gifski_renderer())
+animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())
 
 ```
 
 
+###Making the correlation plot for coronary artery disease
 
-
-###Making the correlation plot
 To make the correlation plot, we first transformed our dataset in the wide format and called it `nyc_cvrisk_wide`.
 
 ```{r}
@@ -247,10 +261,14 @@ nyc_cvrisk_wide %>%
          "Physical Inactivity" = physical_inactivity,
          "Poor Sleep" = sleep_7_hours)%>%
   cor() %>% 
-  corrplot(order = "AOE")
+  corrplot(method = "square", addCoef.col = "black", tl.col="black", tl.srt=45, insig = "blank", 
+         # hide correlation coefficient on the principal diagonal
+         diag=FALSE)
 
 
 ```
+
+###Making the correlation plot for stroke
 
 The correlation plot for stroke and risk factors of interest is as follows:
 
@@ -268,18 +286,71 @@ nyc_cvrisk_wide %>%
          "No Insurance" = health_insurance,
          "Poor Mental Health" = mental_health,
          "Obesity" = obesity,
-         "Poor Health" = physical_health,
+         "Poor Physical Health" = physical_health,
          "Physical Inactivity" = physical_inactivity,
          "Poor Sleep" = sleep_7_hours)%>%
   cor() %>% 
-  corrplot(order = "AOE")
+  corrplot(method = "square", addCoef.col = "black", tl.col="black", tl.srt=45, insig = "blank", 
+         # hide correlation coefficient on the principal diagonal
+         diag=FALSE)
 ```
 
 
-#Additional Analysis
-We used the `shinyApp` and `leaflet` package to perform visualization of geographic distribution of several risk factors and outcomes in New York City.
+#Findings
 
-We also used `shinyApp` and `plotly` package to build a program to calculate individual risk of heart disease using the Framingham Risk Score
+We made several salient observations about correlation of risk factors with *Coronary Artery Disease* and *Stroke*.
+
+###Factors correlated with coronary artery disease
+
+We observed that the following factors were strongly positively correlated with coronary artery disease:
+
+* Chronic Kidney Disease - r = 0.85
+* Diabetes - r = 0.71
+* Poor Physical Health - r = 0.7
+* Physical Inactivity - r = 0.6
+* Poor Mental Health - r = 0.4
+* Current Smoking - r = 0.4
+
+We observed that the following factors were strongly negatively correlated with coronary artery disease:
+
+* Binge Alcohol Drinking - r = -0.6
+
+###Factors correlated with stroke
+
+We observed that the following factors were strongly positively correlated with coronary artery disease:
+
+* Chronic Kidney Disease - r = 0.97
+* Diabetes - r = 0.9
+* Poor Physical Health - r = 0.8
+* Physical Inactivity - r = 0.7
+* Poor Mental Health - r = 0.7
+* Current Smoking - r = 0.7
+* Obesity - r = 0.7
+* Poor Sleep - r = 0.6
+* Lack of Health Insurance - r = 0.5
+
+We observed that the following factors were strongly negatively correlated with coronary artery disease:
+
+* Binge Alcohol Drinking - r = -0.7
+
+
+#Additional Analysis
+
+### Geocoding
+We used the `shinyApp` and `leaflet` package to perform visualization of geographic distribution of several risk factors and outcomes in New York City. We observed that most of the risk factors were observed with higher frequency in the Harlem and Bronx area. Unhealthy behaviors like binge alcohol drinking, however, were more prevalent in downtown Manhattan.
+
+### Risk Prediction
+We also used `shinyApp` and `plotly` package to build a program to calculate individual risk of heart disease using the Framingham Risk Score. This app allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm.
 
 
 #Discussion
+
+In the process of building this project, we gained several insights about risk factors for heart disease. 
+
+* In particular, the strength of correlation of lifestyle risk factors with coronary artery disease and stroke indicate the potential for making an impact by targeting these interventions. Interestingly, alcohol intake was negatively correlated with both coronary disease and stroke. This has been observed in several meta-analyses as well. This is however, likely only an association, and not evidence of causation, as discussed in [this article](http://www.onlinejacc.org/content/accj/69/1/25.full.pdf)
+
+* Visualization of geographic variation of these risk factors in outcomes in New York City provide insights into target neighborhoods for implementation of cardiovascular risk reduction policies.
+
+* Visualization of individual risk for heart disease using patient-level inputs, and the ability to understand how modification of one input can impact the risk can be very powerful for people working toward decreasing their risk.
+
+
