--- a/index.Rmd
+++ b/index.Rmd
@@ -15,3 +15,5 @@ Heart disease is the leading cause of death for both men and women in the United
 
 <h2> Dataset </h2>
 We utilized the [500 Cities: Local Data for Better Health](https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd) dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.
+
+For a detailed explanation of our findings and conclusions, read our Project Report [here](final_project_report.html)
