--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "The Heart Project"
-head: <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+head: link rel="icon" type="image/x-icon" href="favicon.ico"
 ---
 
 
