--- a/data_processing.Rmd
+++ b/data_processing.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "tudy"
-author: "JiyueQin"
-date: "November 19, 2018"
+title: "Exploratory Work"
+author: "Aakriti, Jiyue, Annie, and Margaret"
+date: "November 19, 2018 - December 5, 2018"
 output: github_document
 ---
 
