--- a/index.Rmd
+++ b/index.Rmd
@@ -19,6 +19,8 @@ We utilized the [500 Cities: Local Data for Better Health](https://catalog.data.
 
 For a detailed explanation of our findings and conclusions, read our Project Report [here](final_project_report.html)
 
-###Can embed screencast here
+For a brief overview of our website, view our screencast [here](https://www.youtube.com/watch?v=ogEZEKVYpkQ)
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ogEZEKVYpkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h3>Contributors: Annie Clark | Jiyue Qin | Margaret Gacheru | Aakriti Gupta </h3>
