--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -104,13 +104,10 @@ In order to predict risk for heart disease for an individual, we utilized the [F
 We scraped the data directly from the web as seen in the code below and called it `cvrisk`.
 
 ```{r, eval=FALSE}
-cvrisk_url = "https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD"
 
-## Read in data from github
-cvrisk = 
-  read.csv(url(cvrisk_url)) %>% 
-  janitor::clean_names() %>% 
-  as_tibble()
+cvrisk = read_csv("https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD") %>% 
+    janitor::clean_names() 
+
 ```
 
 We then restricted our database to census tract -level data in New York City and included only the variables that were useful for further data visualization. We called this database `nyc_cvrisk`. We then exported this to a csv in our repository so that we can read in the limited dataset for future use to improve efficiency.
