--- a/index.Rmd
+++ b/index.Rmd
@@ -14,9 +14,22 @@ title: "The Heart Project"
 Heart disease is the leading cause of death for both men and women in the United States and in New York State. More than 800,000 people in the United States die from cardiovascular disease each year—that's 1 in every 3 deaths, and about 160,000 of them occur in people under age 65. As young residents of New York City, we were collectively interested in investigating prevalence of heart disease and stroke and their risk factors in our city to help us identify targets for cardiovascular prevention policy implementation.
 
 <h2> Dataset </h2>
-We utilized the [500 Cities: Local Data for Better Health](https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd) dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.
+We utilized the [500 Cities: Local Data for Better Health](https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd) dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city. The current dataset includes prevalence estimates across 2015 and 2016.
+
+<h2> Findings </h2>
+
+All of the risk factors (with the execption of binge drinking) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke. 
+
+
 
 For a detailed explanation of our findings and conclusions, read our Project Report [here](final_project_report.html)
+
+
+<h2> Website Overview </h2>
+
+* Analysis:
+* NYC Map:
+* 
 
 For a brief overview of our website, view our screencast [here](https://www.youtube.com/watch?v=ogEZEKVYpkQ)
 
