--- a/final_project_report.Rmd
+++ b/final_project_report.Rmd
@@ -103,22 +103,23 @@ In order to predict risk for heart disease for an individual, we utilized the [F
 
 We scraped the data directly from the web as seen in the code below and called it `cvrisk`.
 
-```{r, cache=TRUE, warning=FALSE, message=FALSE}
+```{r, eval=FALSE}
 
 cvrisk = read_csv("https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD") %>% 
     janitor::clean_names() 
 
 ```
 
-We then restricted our database to census tract -level data in New York City and included only the variables that were useful for further data visualization. We called this database `nyc_cvrisk`. 
+We then restricted our database to census tract -level data in New York City and included only the variables that were useful for further data visualization. We called this database `nyc_cvrisk`. We then exported this to a csv in our repository so that we can read in the limited dataset for future use to improve efficiency.
 
-```{r}
+There were 591 missing values in the dataset, which corresponded to observations that had population counts less than 50. For this reason, we did include these datapoints in our analysis and removed them while tidying. 
+
+```{r, eval=FALSE}
 nyc_cvrisk = 
   cvrisk %>% 
   filter(state_desc == "New York", city_name == "New York",
          geographic_level == "Census Tract",
          !is.na(data_value),
-         year == 2016,
          measure_id %in% c("ACCESS2", "BINGE", "BPHIGH", "BPMED", "OBESITY", "CHECKUP", 
                          "CHOLSCREEN", "CSMOKING", "DIABETES", "HIGHCHOL", "KIDNEY", 
                          "LPA", "MHLTH", "PHLTH", "SLEEP", "CHD", "STROKE")) %>%
@@ -126,13 +127,46 @@ nyc_cvrisk =
   select(unique_id, population_count, measure_id, data_value, short_question_text)
 ```
 
+The following is a distribution of the prevalences of all of the relevant variables. As you can see the risk factors with highest prevalence involve screening and medication (BPMED, CHECKUP and CHOLSCREEN). The risk factors with the lowest prevlances are diseases (CHD, KIDNEY and STROKE). There is a general trend of higher variance among risk factors with higher prevalences.
+
+```{r}
+nyc_cvrisk %>%
+  ggplot(aes(x = measure_id, y = data_value, color = measure_id)) + 
+  geom_boxplot() +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),
+        legend.position = "none") + 
+   labs(
+      title = "Risk Factor Prevalence in NYC 2015-2016",
+      x = "Risk Factor",
+      y = "Prevalence (%)",
+      caption = "Data from the BRFSS SMART 2010"
+    ) + 
+    viridis::scale_color_viridis(
+      discrete = TRUE
+    )
+```
+
+
+
+###Reading in the NYC data file
+
+```{r, message=FALSE, warning=FALSE}
+nyc_cvrisk = read_csv(file = "./data/nyc_cvrisk.csv")
+```
+
+
 ###Making the animated scatterplot for coronary artery disease
 
-We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset. We also repeated the same thing to create another dataset for stroke.
+We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset.
 
 ```{r}
 nyc_cvrisk_limited = nyc_cvrisk %>% 
-  filter(short_question_text %in% c("Annual Checkup", "Binge Drinking", "Cholesterol Screening", "Chronic Kidney Disease", "Current Smoking", "Diabetes", "Health Insurance", "High Blood Pressure", "High Cholesterol", "Mental Health", "Obesity", "Physical Health", "Physical Inactivity", "Sleep <7 hours", "Taking BP Medication")) %>% 
+  filter(short_question_text %in% c("Annual Checkup", "Binge Drinking", "Cholesterol Screening",
+                                    "Chronic Kidney Disease", "Current Smoking", "Diabetes", 
+                                    "Health Insurance", "High Blood Pressure", "High Cholesterol",
+                                    "Mental Health", "Obesity", "Physical Health", 
+                                    "Physical Inactivity", "Sleep <7 hours", 
+                                    "Taking BP Medication")) %>% 
   droplevels() %>% 
   mutate(risk_factor = short_question_text) %>% 
   select(-short_question_text, -measure_id)
@@ -159,7 +193,7 @@ We then installed the package required for animation
 devtools::install_github('thomasp85/gganimate')
 ```
 
-We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis using the package `gganimate`.
+We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis
 
 ```{r, warning=FALSE}
 theme_set(theme_bw())  # pre-set the bw theme.
@@ -238,7 +272,7 @@ nyc_cvrisk_wide =
   janitor::clean_names()
 ```
 
-We then used the `corrplot` package to generate the correlation plot for coronary heart disease and risk factors of interest as follows:
+The correlation plot for coronary heart disease and risk factors of interest is as follows:
 
 ```{r}
 
@@ -297,6 +331,8 @@ nyc_cvrisk_wide %>%
 
 We made several salient observations about correlation of risk factors with *Coronary Artery Disease* and *Stroke*.
 
+All of the risk factors (with the execption of binge drinking) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke. 
+
 ###Factors correlated with coronary artery disease
 
 We observed that the following factors were strongly positively correlated with coronary artery disease:
@@ -344,7 +380,7 @@ We also used `shinyApp` and `plotly` package to build a program to calculate ind
 
 In the process of building this project, we gained several insights about risk factors for heart disease. 
 
-* In particular, the strength of correlation of lifestyle risk factors like physical inactivity and smoking with coronary artery disease and stroke indicate the potential for making an impact by targeting these interventions. Our findings also highlight the need for raising the awareness for modifiable factors like hypertension and diabetes that are also strongly correlated with heart disease. Variable slef-reporting of these conditions across NYC as visualized in our NYC Map app could also likely be due to variation in awareness and underdiagnosis. Interestingly, alcohol intake was negatively correlated with both coronary disease and stroke. This has been observed in several meta-analyses as well. This is however, likely only an association, and not evidence of causation, as discussed in [this article](http://www.onlinejacc.org/content/accj/69/1/25.full.pdf).
+* In particular, the strength of correlation of lifestyle risk factors with coronary artery disease and stroke indicate the potential for making an impact by targeting these interventions. Interestingly, alcohol intake was negatively correlated with both coronary disease and stroke. This has been observed in several meta-analyses as well. This is however, likely only an association, and not evidence of causation, as discussed in [this article](http://www.onlinejacc.org/content/accj/69/1/25.full.pdf).
 
 * Visualization of geographic variation of these risk factors in outcomes in New York City provide insights into target neighborhoods for implementation of cardiovascular risk reduction policies.
 
