--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ We utilized the [500 Cities: Local Data for Better Health](https://catalog.data.
 
 All of the risk factors (with the execption of binge drinking) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke. 
 
-
+The map of NYC allows you to explore the prevlances of risk factors across the city. We observed that most of the risk factors were observed with higher frequency in the Harlem and Bronx area. Unhealthy behaviors like binge alcohol drinking, however, were more prevalent in downtown Manhattan.
 
 For a detailed explanation of our findings and conclusions, read our Project Report [here](final_project_report.html)
 
